--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
           password: ${{ secrets.JFROG_PASSWORD }}
       - name: docker build
         run: |
-          docker build . --file dockerfile --tag connecttesth.jfrog.io/docker/wordpress:latest
+          docker build . --file dockerfile --tag connecttesth.jfrog.io/dockerrock-virtual/wordpress:latest
       - name: docker push
         run: |
-          docker push connecttesth.jfrog.io/docker/wordpress:latest
+          docker push connecttesth.jfrog.io/dockerrock-virtual/wordpress:latest
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -46,7 +46,7 @@ jobs:
             WORDPRESS_DB_USER = admin
           task-definition: task-definition.json
           container-name: wordpress-dev-ecs
-          image: connecttesth.jfrog.io/docker/wordpress:latest
+          image: connecttesth.jfrog.io/dockerrock-virtual/wordpress:latest
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
