--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           docker build . --file dockerfile --tag connecttesth.jfrog.io/dockerrock-virtual/wordpress:latest
       - name: docker push
         run: |
-          docker -D push connecttesth.jfrog.io/dockerrock-virtual/wordpress:latest
+          docker push connecttesth.jfrog.io/dockerrock-virtual/wordpress:latest --log-level debug
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
